@@ -52,6 +52,10 @@ Client library:
 - Threaded mode is deconfigured when the mosquitto_loop_start() thread ends,
   which allows mosquitto_loop_start() to be called again. Closes #2242.
 - Fix MOSQ_OPT_SSL_CTX not being able to be set to NULL. Closes #2289.
+- Fix reconnecting failing when MOSQ_OPT_TLS_USE_OS_CERTS was in use, but none
+  of capath, cafile, psk, nor MOSQ_OPT_SSL_CTX were set, and
+  MOSQ_OPT_SSL_CTX_WITH_DEFAULTS was set to the default value of true.
+  Closes #2288.
 
 Apps:
 - Fix `mosquitto_ctrl dynsec setDefaultACLAccess` command not working.
